objects/Mitigation_Action__c.object
<CustomObject>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mitigation_Action_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mitigation Action Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mitigation_Action</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Team_Member_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>Core_Team_Member__c</referenceTo>
        <relationshipLabel>Mitigation Action</relationshipLabel>
        <relationshipName>Mitigation_Action</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_ID__c</fullName>
        <label>Risk ID</label>
        <referenceTo>Risks__c</referenceTo>
        <relationshipLabel>Mitigation Action</relationshipLabel>
        <relationshipName>Mitigation_Action</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Target</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Mitigation Action</label>
    <nameField>
        <displayFormat>MA-{0000000000}</displayFormat>
        <label>Mitigation Action ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mitigation Action</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>